Adicionado parte da lele